# ParallelComputing_Exercise_02

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
cpp_integration/: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  THAIN.test.py  aStarWithDynamicCostFunctionTest.py  aStarWithVectorFunctionTest.py  test.py  testAStar.py  testAStar.summary.csv  testAStarEnhancement.py  testAStarEnhancement.summary.csv
cpp_integration/benchmarks/: CMakeLists.txt  pq_benchmark.cpp  set_benchmark.cpp  set_benchmarks_result.json
cpp_integration/benchmarks/benchmark_results/: pq_benchmarks_result.json  set_benchmarks_result.json
cpp_integration/include/: graph_types.h  road_network.h
cpp_integration/include/data_structure/: ipq.h  iset.h  pq_fine.h  set_coarse.h  set_fine.h  set_sequential.h
cpp_integration/include/demo/: aStarWithDynamicCostFunction.h  astar.h
cpp_integration/src/: bindings.cpp  test.cpp
cpp_integration/src/aStarEnhancement/: aStarWithDynamicCostFunction.cpp
cpp_integration/src/demo/: aStarWithDynamicCostFunction.cpp  aStarWithVectorFunction.cpp  astar.cpp
cpp_integration/tests/: CMakeLists.txt  pq_concurrent_test.cpp  pq_sequential_test.cpp  set_concurrent_test.cpp  set_sequential_test.cpp  set_test.cpp
osm_data/: README.md  download_from_gdrive.py  download_process_osm.py
report/data_structures/: README.md  generate_benchmark_table.py  plot_benchmarks.py
