[project]
name = "02"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "gdown>=5.2.0",
    "geopandas>=1.0.1",
    "isort>=6.0.1",
    "jupyterlab>=4.4.0",
    "jupyterlab-code-formatter>=3.0.2",
    "matplotlib>=3.10.1",
    "networkx>=3.4.2",
    "numpy>=2.2.4",
    "osmnx>=2.0.2",
    "pandas>=2.2.3",
    "pybind11>=2.13.6",
    "scikit-learn>=1.6.1",
]
